--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                     </p>
                     
                     <h2 style="text-align: left;">Contact</h2>
-                    <p> Follow me on <a href ="https://www.instagram.com/eric1998x/"> Instagram! @eric1998x </a> </p>
+                    <p> Follow me on Instagram! <a href ="https://www.instagram.com/eric1998x/" >@eric1998x </a> </p>
 
             </div>
             
